-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The set_blockdev_tunables function in lustre/utils/mount_lustre.c doesn't correctly parse the newer names of partitioned MD devices (e.g., /dev/md0p2) .. it looks like it's written to parse the older partitioned MD devices (e.g., /dev/md_d2p3).
This means that MD partions like /dev/md0p2 do not receive MD-level tunings that non-partitioned MD devices get (specifically stripe_cache_size), leading to a large performance hit.
- is related to
-
LU-9405 mount.lustre parses device paths dumbly
-
- Resolved
-